# Sim_Gazebo

./: .gitignore  DOCUMENTATION.md  LICENSE.md  README.md  clean_workspace.sh  download_gazebo_models.sh  install_docker.sh  install_jackal.sh  install_ros.sh  kill_all.sh  run-nvidia.sh  run_car_demo.sh  run_jackal_demo.sh  run_python_scipt.sh  setup_git_lfs.sh  source_and_build.sh  source_workspace.sh
catkin_ws/src/PCL/pcl-ros-tutorial/: PCL Reference with ROS.md  README.md
catkin_ws/src/PCL/pcl_tutorials_ros/: CMakeLists.txt  LICENSE  README.md  package.xml
catkin_ws/src/PCL/pcl_tutorials_ros/doc/: Tutorials.md
catkin_ws/src/PCL/point_cloud_converter/: CMakeLists.txt  package.xml
catkin_ws/src/lost_cargo_detection/: CMakeLists.txt  package.xml
catkin_ws/src/lost_cargo_detection/launch/: lost_cargo.launch
catkin_ws/src/lost_cargo_detection/rviz/: temp.rviz
catkin_ws/src/lost_cargo_detection/scripts/: PCL_test.py  caller.py  cloud_cluster.py  lost_cargo_detection.py  lost_cargo_detection_class.py  matplot_issue.py  new_LC.py  pcd_viz.py  pcl_helper.py  perception_functions.py  pointcloud_subscriber.py  project_template.py  rviz_marker.py  test.py  visualizer.py
catkin_ws/src/lost_cargo_detection/src/: ground_plane_detection.cpp
catkin_ws/src/sensors/kinect_v2_udrf/: LICENSE  README.md
catkin_ws/src/sensors/velodyne_simulator/: LICENSE  README.md  bitbucket-pipelines.yml
catkin_ws/src/vehicle/gazebo_world_description/: CMakeLists.txt  package.xml
catkin_ws/src/vehicle/jackal_velodyne/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/vehicle/vehicle_model/: CMakeLists.txt  package.xml
catkin_ws/src/vehicle/vehicle_sim_interface/: CMakeLists.txt  package.xml
catkin_ws/src/vehicle/vehicle_sim_launcher/: CMakeLists.txt  package.xml
docker/nvidia/: README.md  build.sh  kinetic.Dockerfile
scripts/: install_gazebo.sh  source_and_build.sh
(+167 files in other folders)
